samples/_failures_safe/1761537065_e2bc7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f4477390.c: In function ‘main’:
./samples/SAFE/__tmp_f4477390.c:176:5: error: expected expression at end of input
  176 |     TokenHandler handlers[] = {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_f4477390.c:176:5: error: expected declaration or statement at end of input
